# FF-GUI

./: .gitattributes  Cargo.toml  README.md  build-direct.ps1  build.rs
src/: app_state.rs  automation_flow.rs  bundled_ffmpeg.rs  codec_manager.rs  comprehensive_codec_registry.rs  comprehensive_command_builder.rs  comprehensive_ui_components.rs  ffmpeg_worker_simple.rs  hardware_detector.rs  language.rs  logging.rs  main.rs  operation_settings.rs  preset_manager.rs  task_executor.rs  ui_components.rs
