[package]
name = "ffmpeg_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
anyhow = "1.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"
lazy_static = "1.4"
which = "6.0"

[build-dependencies]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"